# KompAgent

./: .env.example  .gitignore  .prettierrc  CLAUDE.md  README.md  TECH_STACK.md  docker-compose.dev.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
backend/: main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  routers.py
backend/app/controllers/: __init__.py  agent.py  device.py  health.py  spatial.py
backend/app/services/: llm.py  spatial.py
docker/: init-db.sql
examples/frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
examples/frontend/src/: App.tsx  index.css
examples/frontend/src/components/: Layout.tsx
examples/frontend/src/pages/: Chat.tsx  Device.tsx  Home.tsx  Spatial.tsx
libs/spatial-agent/: package.json  tsdown.config.ts
libs/spatial-agent/src/: agent.ts  index.ts  llm.ts  types.ts
libs/spatial-agent/src/backends/: device.ts  index.ts  postgis.ts  protocol.ts  spatial.ts
libs/spatial-agent/src/middleware/: device-control.ts  index.ts  spatial-query.ts  trajectory.ts
libs/spatial-agent/src/skills/: index.ts  spatial-skills.ts
